--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,22 @@
     font-weight: 300;
     color: black;
 }
+body {
+    /* background-color: rgb(38, 139, 234); */
+    background-image: linear-gradient(to right,rgb(3, 112, 202),rgb(57, 146, 202));;
+  }
+  button {
+    background-color: rgb(74, 174, 255);
+    color: #fff;
+    border: none;
+    padding: 10px 80px;
+    border-radius: 25px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+  }
+  
+  button:hover {
+    cursor: pointer;
+    background-color: rgb(26, 133, 255);
+    transition: all 0.3s;
+      transform:scale(1.01)
+  }
